# python-cookiecutter

./: .gitignore  AGENTS.md  LICENSE  README.md  cookiecutter.json  copier.yml  dev  example.env  pyproject.toml
hooks/: post_gen_project.py
scripts/: dev.py
scripts/commands/: build.py  claude.py  lint.py  run.py  test.py  utils.py
src/python_scaffolding/: main.py
template/: .copier-answers.yml.jinja  .gitignore  .pre-commit-config.yaml  AGENTS.md.jinja  LICENSE.jinja  README.md  README.md.jinja  dev  pyproject.toml  pyproject.toml.jinja  {{_copier_conf.answers_file}}.jinja
template/scripts/: __init__.py  dev.py
template/scripts/commands/: __init__.py  build.py  claude.py  clean.py  init.py  lint.py  run.py  run.py.jinja  test.py  upgrade.py
template/tests/: main_test.py  main_test.py.jinja
template/tests/data/: sample.txt
tests/: conftest.py  test_main.py
{{ cookiecutter.project_slug }}/: AGENTS.md  LICENSE  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/scripts/: detect_dirty_working_tree.py  dev.py
{{ cookiecutter.project_slug }}/scripts/commands/: build.py  init.py  lint.py  run.py
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_main.py
{{ cookiecutter.project_slug }}/tests/data/: README.md
