[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "python-scaffolding"
version = "0.1.0"
description = "Python Scaffolding"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--tb=short --import-mode=importlib"
